# rust-send-html-smtp-emails

./: .env.example  Cargo.toml  Makefile  README.md
src/: config.rs  email.rs  main.rs
